# python_for_data_analysis

./: README.md  Task_1.ipynb  Task_2.ipynb  Task_3.ipynb
task_4/task_4/: README.md  pyproject.toml  pyproject_poetry.toml
task_4/task_4/averageTemperature/: avgtemp.py
task_4/task_4/averageTemperature.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
task_4/task_4/averageTemperature/data/: test_data_1.csv  test_data_2.csv
task_4/task_4/tests/averageTemperature/: test_avgtemp.py
