[build-system]
requires = [
    "setuptools >= 61.0", 
]
build-backend = "setuptools.build_meta"

[project]
name = "averageTemperature"
version = "0.0.1"

authors = [
  { name="Timur Akhmatshin", email="st077029@student.spbu.ru" },
]
description = "Package with function that computes average temperature in city in particular year from csv data"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "fastapi >= 0.105.0",
    "requests >= 2.0.0",
    "pandas >= 1.4.2",
    "numpy >= 1.21.5"
]

[project.urls]
"Homepage" = "https://apmath.spbu.ru"
"Bug Tracker" = "https://github.com/averageTemperature"

[project.optional-dependencies]
dev = [
    "mypy >= 1.7.1",
    "ruff >= 0.1.8",
    "black >= 23.12.0",
    "isort >= 5.3.12",
    "pytest >= 7.4.3"
]

inference = [
    "tqdm >= 4.66.0"
]

[tool.isort]
profile = "black"
src_paths = ["projectname", "test"]

[tool.mypy]
python_version = "3.10"
disallow_untyped_defs = false
disallow_incomplete_defs = false
follow_imports = "normal"
ignore_missing_imports = true
pretty = true
show_column_numbers = true
show_error_codes = true
warn_no_return = false
warn_unused_ignores = true

[tool.black]
skip-string-normalization = true

[tool.ruff]
line-length = 88